--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ builds/
 
 # Other files and folders
 .settings/
+.DS_store
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
